force-app/main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <description>BN
BLDG
To track fleet vehicle servicing
Manually created.</description>
    <label>Service</label>
    <nameField>
        <displayFormat>SVC-{0000}</displayFormat>
        <label>Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>