force-app/main/default/objects/Service__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BN
BLDG
To track fleet vehicle servicing
Manually created.</description>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>