force-app/main/default/objects/Service__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>BN
BLDG
To track fleet vehicle servicing
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>