force-app/main/default/objects/Service__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <description>BN
BLDG
To track fleet vehicle servicing
Manually created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>