force-app/main/default/objects/Service__c/fields/Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Time__c</fullName>
    <description>BN
BLDG
To track fleet vehicle servicing
Manually created.</description>
    <label>Service Time</label>
    <type>Time</type>
</CustomField>