force-app/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Service_Time__c</columns>
    <columns>Service_Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Vehicle Service - All</label>
</ListView>