force-app/main/default/objects/Service__c/listViews/Copy_of_Vehicle_Service_Canceled.listView-meta.xml
<ListView>
    <fullName>Copy_of_Vehicle_Service_Canceled</fullName>
    <columns>NAME</columns>
    <columns>Vehicle__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Service_Time__c</columns>
    <columns>Service_Description__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>Vehicle Service - Canceled</label>
</ListView>