force-app/main/default/objects/Service__c/listViews/Vehicle_Service_Scheduled.listView-meta.xml
<ListView>
    <fullName>Vehicle_Service_Scheduled</fullName>
    <columns>NAME</columns>
    <columns>Vehicle__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Service_Time__c</columns>
    <columns>Service_Description__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Vehicle Service - Scheduled</label>
</ListView>